View Issue Details

IDProjectCategoryView StatusLast Update
0024777Open CASCADEOCCT:Visualizationpublic2014-11-11 12:51
Reporterkgv Assigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.3.1 
Target Version6.8.0Fixed in Version6.8.0 
Summary0024777: Visualization - AIS_InteractiveContext::MoveTo() doesn't keep detected object at first call
DescriptionFor some unknown reason current implementation of AIS_InteractiveContext::MoveTo() resets detected object at first call.
TagsNo tags attached.
Test case numberNot needed

Activities

kgv

2014-03-29 13:41

developer   ~0028555

Patch is ready for review in branch CR24777.

san

2014-04-01 18:02

developer   ~0028601

Branch CR24777 reviewed without remarks, ready for testing.

mkv

2014-04-02 14:20

tester   ~0028629

Dear BugMaster,

Branch CR24777 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 3432a4559bb70f4831e19dc04d2b6fd52485d1f3

Number of compiler warnings:

occt component :
Linux: 27 (27 on master)
Windows: 0 (0 on master)

products component :
Linux: 12 (12 on master)
Windows: 2 (2 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 393825248 / 393242136
Total CPU difference: 64352.70000000007 / 57189.309999999896

Testing on Windows:
Total MEMORY difference: 423208368 / 414274688
Total CPU difference: 37808.859375 / 42798.984375

There are no differences in images found by testdiff.

Related Changesets

occt: master 8abada55

2014-04-03 12:24:28

kgv


Committer: apn Details Diff
0024777: Visualization - AIS_InteractiveContext::MoveTo() doesn't keep detected object at first call

Draw Harness, ViewerTest - ignore rectangular selection for empty rectangle
Affected Issues
0024777
mod - src/AIS/AIS_InteractiveContext_1.cxx Diff File
mod - src/ViewerTest/ViewerTest_EventManager.cxx Diff File
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx Diff File

Issue History

Date Modified Username Field Change
2014-03-29 13:29 kgv New Issue
2014-03-29 13:29 kgv Assigned To => san
2014-03-29 13:29 kgv Assigned To san => kgv
2014-03-29 13:29 kgv Status new => assigned
2014-03-29 13:41 kgv Note Added: 0028555
2014-03-29 13:41 kgv Assigned To kgv => san
2014-03-29 13:41 kgv Status assigned => resolved
2014-03-29 13:41 kgv Summary Visualization - AIS_InteractiveContext::MoveTo() dosen't detect object at first call => Visualization - AIS_InteractiveContext::MoveTo() doesn't keep detected object at first call
2014-03-31 08:47 kgv Product Version 6.7.0 => 6.3.1
2014-04-01 18:02 san Note Added: 0028601
2014-04-01 18:02 san Assigned To san => bugmaster
2014-04-01 18:02 san Status resolved => reviewed
2014-04-01 19:55 mkv Assigned To bugmaster => mkv
2014-04-02 14:20 mkv Note Added: 0028629
2014-04-02 14:20 mkv Test case number => Not needed
2014-04-02 14:20 mkv Assigned To mkv => bugmaster
2014-04-02 14:20 mkv Status reviewed => tested
2014-04-04 14:00 abv Target Version 6.7.1 => 6.8.0
2014-04-04 17:03 apn Changeset attached => occt master 8abada55
2014-04-04 17:03 apn Assigned To bugmaster => apn
2014-04-04 17:03 apn Status tested => verified
2014-04-04 17:03 apn Resolution open => fixed
2014-11-11 12:47 aiv Fixed in Version => 6.8.0
2014-11-11 12:51 aiv Status verified => closed